# clink

./: Cargo.toml  LICENSE  NOTICE  readme.md
.github/: dependabot.yml
.github/workflows/: check.yml  lint_and_test.yml  release.yml  rust.yml  scheduled.yml  test.yml
contrib/: clink.fish  clink.service
scripts/: refresh-snapshot.sh
src/: builtin.rs  builtin_extras.toml  builtin_patterns.toml  clearurls.rs  cli.rs  clink.rs  config.rs  default_config.toml  expand_string.rs  expand_url.rs  lib.rs  main.rs  migration.rs  mode.rs  params.rs  provider.rs  remote.rs  runtime.rs  service.rs  signal.rs  stats.rs  utils.rs
src/commands/: config.rs  init.rs  install.rs  mod.rs  reload.rs  restart.rs  run.rs  state.rs  uninstall.rs  update.rs  validate.rs
