[package]
name = "clink"
version = "0.8.0"
authors = ["Serhiy Barhamon <bargamon@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta = "=0.10.2"
linkify = "=0.10.0"
url = "=2.5.7"
rustop = "=1.1.4"
rand = "=0.9.2"
confy = "=1.0.0"
serde = { version = "=1.0.228", features = ["derive", "rc"] }
chrono = "=0.4.42"
dirs-next = "=2.0.0"
toml = "=0.9.7"
