[package]
name = "clink"
version = "0.8.0"
authors = ["Serhiy Barhamon <bargamon@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta = "=0.10.2"
linkify = "0.11.0"
url = "=2.5.8"
percent-encoding = "=2.3.2"
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
confy = "=2.0.0"
serde = { version = "=1.0.228", features = ["derive", "rc"] }
serde_json = "=1.0.149"
chrono = "=0.4.44"
dirs-next = "=2.0.0"
toml = "1.1.2"
ureq = "3"
regex = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "=0.31.2", features = ["signal", "process"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
